--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,15 @@
 {
   "extends": [
     "eslint:recommended",
+    "plugin:react/recommended",
     "plugin:prettier/recommended"
   ],
   "parser": "babel-eslint",
   "env": {
     "browser": true,
     "node": true
+  },
+  "rules": {
+    "react/prop-types": "off"
   }
 }
