--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "react-intl-provider",
+  "name": "react-intl-context-provider",
   "version": "0.0.1",
   "description": "Wrapper around react-intl provider that allows you to change language easily.",
   "scripts": {
     "prepublishOnly": "npm run release",
     "release": "npm run build:dev && npm run build:prod",
-    "build:dev": "NODE_ENV=development rollup -c",
+    "build:dev": "rollup -c",
     "build:prod": "NODE_ENV=production rollup -c",
     "dev": "npm run build:dev -- --watch",
     "lint": "eslint ."
@@ -31,13 +31,16 @@
     "babel-eslint": "^8.2.6",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "eslint": "^5.2.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-react": "^7.10.0",
     "prettier": "^1.13.7",
     "react": "^16.3.2",
+    "react-intl": "^2.4.0",
     "rollup": "^0.63.4",
     "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-commonjs": "^9.1.3",
@@ -45,6 +48,7 @@
     "rollup-plugin-replace": "^2.0.0"
   },
   "peerDependencies": {
-    "react": ">= 16.3.x"
+    "react": ">= 16.3.x",
+    "react-intl": ">= 2.x.x"
   }
 }
